--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "projetox",
   "version": "0.1.0",
    "engines": {
-    "node": "12.16.3"
+    "node": "12.16.3",
+    "npm": "6.14.6"
   },
   "private": true,
   "dependencies": {
