--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-router-page-transition": "^3.1.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
